# feed-applet

./: Cargo.toml  package-lock.json
dna/integrity_zomes/posts_integrity/src/: lib.rs  post.rs
dna/workdir/: dna.yaml
tests/: package.json  tsconfig.json
tests/src/feed/posts/: all-posts.test.ts  post.test.ts
ui/src/components/: all-posts.ts  create-post.ts  edit-post.ts  post-detail.ts
workdir/: happ.yaml  web-happ.yaml
